k8s/airflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: airflow.akimovp.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow
                port:
                  number: 8080
