k8s/ingress-rag.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rag-service-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx 
  rules:
    - host: rag.akimovp.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rag-service
                port:
                  number: 8000
